# screenmu-chrome

./: .gitignore  README.md
engine_core/: Cargo.toml
engine_core/proptest-regressions/: time_remap.txt
engine_core/src/: camera.rs  cursor.rs  effects.rs  error.rs  focus.rs  lib.rs  time_remap.rs  types.rs
extension/: manifest.json  permissions.html  permissions.js  popup.html  popup.js
extension/src/: background.js  content.js  offscreen.html  offscreen.js  types.ts
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  types.ts  vite-env.d.ts
web/src/components/: CutSegments.test.tsx  CutSegments.tsx  SpeedRamps.test.tsx  SpeedRamps.tsx  Timeline.test.tsx  Timeline.tsx  TrimHandles.property.test.ts  TrimHandles.test.tsx  TrimHandles.tsx  ZoomSegments.tsx
web/src/editing/: UndoManager.property.test.ts  UndoManager.test.ts  UndoManager.ts
web/src/export/: aspectRatio.ts  compositor.ts  index.ts  resolutions.test.ts  resolutions.ts
web/src/hooks/: useCapture.ts  useWasmEngine.ts
web/src/rendering/: background.test.ts  background.ts  cameraBubble.test.ts  cameraBubble.ts  compositor.ts  cursor.test.ts  cursor.ts  deviceFrame.test.ts  deviceFrame.ts  effects.test.ts  effects.ts  export.test.ts  export.ts  index.ts  keyframe.test.ts  keyframe.ts  screenFrame.test.ts  screenFrame.ts  timeRemap.test.ts  timeRemap.ts  types.ts  viewport.test.ts  viewport.ts
web/src/styles/: App.css  CutSegments.css  EditView.css  RecordView.css  SpeedRamps.css  Timeline.css  TrimHandles.css  ZoomSegments.css
web/src/views/: EditView.keyboard.test.ts  (+2 more)
