[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"
description = "ScreenMu Rust/WASM engine for auto-reframing, cursor inference, and kinetic polish"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Optional: better panic messages in browser console
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
proptest = "1.4"

[profile.release]
opt-level = "s"
lto = true
